--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,13 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-
   "dependencies": {
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "@mui/material": "latest",
-    "@emotion/react": "latest",
-    "@emotion/styled": "latest"
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.1",
+    "@mui/icons-material": "5.18.0",
+    "@mui/material": "5.18.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
