--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "@mui/icons-material": "5.18.0",
     "@mui/material": "5.18.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
