added google oath

--- a/server/server.csproj
+++ b/server/server.csproj
@@ -4,9 +4,11 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>d3d3b00c-f376-463d-8874-9b21f92e0789</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.0" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.10" />
     <PackageReference Include="npgsql" Version="9.0.4" />
     <PackageReference Include="System.Data.SQLite" Version="2.0.2" />
